# fastapi-blog-api

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: alembic.ini  main.py
src/api/dependencies/: auth.py
src/api/endpoints/: __init__.py  articles.py  auth.py  categories.py  protected.py  users.py
src/api/schemas/: article.py  category.py  token.py  user.py
src/core/: security.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 63cec843bac0_add_deleted_articles_title_index.py  826aa0e40078_create_articles_table.py  98088e19dca4_init_tables.py
src/services/: article_service.py  category_service.py  s3_service.py  user_service.py
src/tasks/: celery_app.py  emails.py
tests/: conftest.py  test_article_service_extras.py  test_articles.py  test_auth.py  test_categories.py  test_protected.py  test_s3_service.py  test_user_service.py  test_users.py
