[tool.poetry]
name = "fastapi-blog-api"
version = "0.1.0"
description = ""
authors = ["Vlad Zavorotnyy <vlad.zavorotnyy@gmail.com>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
celery = "^5.4.0"
rabbitmq = "^0.2.0"
boto3 = "^1.34.69"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
